--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "webpack": "^4.12.1"
   }
 }
