Added babel packages to package.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "iamNitin16",
   "license": "MIT",
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "nodemon": "^1.17.5",
