--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
+    "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "nodemon": "^1.17.5",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "style-loader": "^0.21.0",
     "webpack": "^4.12.1"
   }
 }
