--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "style-loader": "^0.21.0",
-    "webpack": "^4.12.1"
+    "webpack": "^4.12.1",
+    "webpack-cli": "^3.0.8"
   }
 }
