--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This repository is a portfolio for my github account.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode development",
+    "start": "npm run build && node server.js"
   },
   "author": "iamNitin16",
   "license": "MIT",
