--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "This repository is a portfolio for my github account.",
   "main": "index.js",
+  "homepage": "https://iamNitin16.github.io",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode development",
-    "start": "npm run build && node server.js"
+    "build": "webpack --mode production",
+    "start": "webpack --mode development && node server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "author": "iamNitin16",
   "license": "MIT",
@@ -18,6 +21,7 @@
     "body-parser": "^1.18.3",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "gh-pages": "^1.2.0",
     "nodemon": "^1.17.5",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
