--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
     "body-parser": "^1.18.3",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "node-sass": "^4.9.0",
     "nodemon": "^1.17.5",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-particles-js": "^2.2.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "sass-loader": "^7.0.3",
+    "semantic-ui-css": "^2.3.2",
+    "semantic-ui-react": "^0.81.2",
     "style-loader": "^0.21.0",
     "webpack": "^4.12.1",
     "webpack-cli": "^3.0.8"
