added new animations config file

--- a/config/bubble-particles-config.json
+++ b/config/bubble-particles-config.json
@@ -8,7 +8,7 @@
       }
     },
     "color": {
-      "value": "#2b2e43"
+      "value": "#22253c"
     },
     "shape": {
       "type": "polygon",
