--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "iamNitin16",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^1.3.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
@@ -26,8 +27,6 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "sass-loader": "^7.0.3",
-    "semantic-ui-css": "^2.3.2",
-    "semantic-ui-react": "^0.81.2",
     "style-loader": "^0.21.0",
     "webpack": "^4.12.1",
     "webpack-cli": "^3.0.8"
